admin log-viewer enhancements added csp form-action directive

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -78,6 +78,7 @@ db.connections.timeoutMs=30000
 db.connections.watchdogFrequencySeconds=30
 db.init.haltOnIndexCreateError=false
 db.schema.keyLength=128
+download.filename.sessions.csv=Sessions.csv
 download.filename.statistics.csv=Statistics.csv
 download.filename.reportSummary.csv=UserReportSummary.csv
 download.filename.reportRecords.csv=UserReportRecords.csv
