--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
-/.idea
-/*.iml
-/client/target
-/client/.node
-/client/.idea
-/client/*.iml
-pwm-parent.iml
-pwmconfig/
-ssprconfig/
-/server/src/main/webapp/public/resources/webjars
+# PWM Project gitignore files
+
+# Eclipse Project Files
+/.project
+/.settings
+/.classpath
+
+# IntelliJ Project Files
+.idea/
+*.iml
+*/.idea/
+*/*.iml
+
+# OS folder info
+.directory
+.DS_Store
+.DS_Store?
+
+# Maven Output
+*/target
+
+
