--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -94,6 +94,7 @@ healthCheck.maximumRecordAgeSeconds=300
 healthCheck.maximumForceCheckWaitSeconds=30
 health.certificate.warnSeconds=2592000
 health.ldap.cautionDurationMS=10800000
+health.ldap.proxy.pwExpireWarnSeconds=2592000
 health.java.maxThreads=1000
 health.java.minHeapBytes=67108864
 helpdesk.token.maxAgeSeconds=300
