new v2 statistics rest api

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -309,4 +309,6 @@ wordlist.maxCharLength=64
 wordlist.minCharLength=2
 ws.restClient.pwRule.haltOnError=true
 ws.restServer.signing.form.timeoutSeconds=120
+ws.restServer.statistics.defaultHistoryDays=7
+ws.restServer.statistics.defaultVersion=2
 password.policy.allowMacroInRegexSetting=true
