checkstyle pom re-org

--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <skipDocker>false</skipDocker>
+        <project.root.basedir>${project.basedir}/..</project.root.basedir>
     </properties>
 
     <profiles>
