--- a/client/pom.xml
+++ b/client/pom.xml
@@ -14,6 +14,10 @@
 
     <name>PWM Password Self Service: Client</name>
 
+    <properties>
+        <project.root.basedir>${project.basedir}/..</project.root.basedir>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
