--- a/onejar/pom.xml
+++ b/onejar/pom.xml
@@ -16,10 +16,9 @@
     <name>PWM Password Self Service: Executable JAR</name>
 
     <properties>
+        <project.root.basedir>${project.basedir}/..</project.root.basedir>
         <tomcat.version>9.0.10</tomcat.version>
         <jetty-version>9.4.11.v20180605</jetty-version>
-
-
     </properties>
 
     <build>
