fix javadoc generation and pom updates

--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -37,7 +37,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>0.9.8</version>
+                <version>0.9.9</version>
                 <executions>
                     <execution>
                         <id>make-docker-image</id>
@@ -63,6 +63,7 @@
                                 <ports>8443</ports>
                             </container>
                             <useCurrentTimestamp>true</useCurrentTimestamp>
+                            <allowInsecureRegistries>true</allowInsecureRegistries>
                         </configuration>
                     </execution>
                 </executions>
