--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -47,7 +47,7 @@
                         </goals>
                         <configuration>
                             <to>
-                                <image>pwm/pwm-webapp</image>
+                                <image>${dockerImageTag}</image>
                             </to>
                             <container>
                                 <jvmFlags>
