--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,18 @@
 
     <properties>
         <warArtifactID>pwm-${project.version}.war</warArtifactID>
+        <dockerImageTag>pwm/pwm-webapp</dockerImageTag>
+
         <build.number>0</build.number>  <!-- default in case not set on command line -->
         <build.revision>0</build.revision>  <!-- default in case not set on command line -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <pwm.minimum.maven.version>3.2</pwm.minimum.maven.version>
         <timestamp.iso>${maven.build.timestamp}</timestamp.iso>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.root.basedir>${project.basedir}</project.root.basedir>
+
         <skipTests>false</skipTests>
         <skipSpotbugs>false</skipSpotbugs>
     </properties>
