--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
                         </goals>
                         <configuration>
                             <rules>
+                                <bannedDependencies>
+                                    <excludes>
+                                        <!-- Moved to javax.servlet.jsp:javax.servlet.jsp-api -->
+                                        <exclude>javax.servlet.jsp:jsp-api</exclude>
+                                    </excludes>
+                                </bannedDependencies>
                                 <requireMavenVersion>
                                     <version>${pwm.minimum.maven.version}</version>
                                 </requireMavenVersion>
@@ -178,7 +184,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>8.11</version>
+                        <version>8.12</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -225,7 +231,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>3.1.3.1</version>
+                <version>3.1.6</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
@@ -250,6 +256,31 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency><groupId>com.github.tomakehurst</groupId><artifactId>wiremock</artifactId><version>2.18.0</version></dependency>
+            <dependency><groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>2.8.5</version></dependency>
+            <dependency><groupId>com.sun.mail</groupId><artifactId>javax.mail</artifactId><version>1.6.1</version></dependency>
+            <dependency><groupId>commons-net</groupId><artifactId>commons-net</artifactId><version>3.6</version></dependency>
+            <dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>4.0.1</version></dependency>
+            <dependency><groupId>javax.servlet.jsp</groupId><artifactId>javax.servlet.jsp-api</artifactId><version>2.2.1</version></dependency>
+            <dependency><groupId>junit</groupId><artifactId>junit</artifactId><version>4.12</version></dependency>
+            <dependency><groupId>log4j</groupId><artifactId>log4j</artifactId><version>1.2.17</version></dependency>
+            <dependency><groupId>net.iharder</groupId><artifactId>base64</artifactId><version>2.3.9</version></dependency>
+            <dependency><groupId>org.apache.axis</groupId><artifactId>axis</artifactId><version>1.4</version></dependency>
+            <dependency><groupId>org.apache.commons</groupId><artifactId>commons-csv</artifactId><version>1.5</version></dependency>
+            <dependency><groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId><version>3.8</version></dependency>
+            <dependency><groupId>org.apache.httpcomponents</groupId><artifactId>httpclient</artifactId><version>4.5.6</version></dependency>
+            <dependency><groupId>org.assertj</groupId><artifactId>assertj-core</artifactId><version>3.11.1</version></dependency>
+            <dependency><groupId>org.bouncycastle</groupId><artifactId>bcpkix-jdk15on</artifactId><version>1.60</version></dependency>
+            <dependency><groupId>org.jdom</groupId><artifactId>jdom2</artifactId><version>2.0.6</version></dependency>
+            <dependency><groupId>org.jetbrains.xodus</groupId><artifactId>xodus-environment</artifactId><version>1.2.3</version></dependency>
+            <dependency><groupId>org.mockito</groupId><artifactId>mockito-core</artifactId><version>2.21.0</version></dependency>
+            <dependency><groupId>org.reflections</groupId><artifactId>reflections</artifactId><version>0.9.11</version></dependency>
+            <dependency><groupId>org.webjars</groupId><artifactId>webjars-locator-core</artifactId><version>0.35</version></dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <!-- common dependencies -->
     <dependencies>
