improve restart speeds

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -142,6 +142,8 @@ http.cookie.maxReadLength=10240
 http.cookie.captchaSkip.name=captcha-key
 http.cookie.captchaSkip.age=86400
 http.cookie.login.name=SESSION
+http.cookie.nonce.name=ID
+http.cookie.nonce.length=32
 http.parameter.forward=forwardURL
 http.parameter.logout=logoutURL
 http.parameter.theme=theme
@@ -172,7 +174,7 @@ intruder.delayPerCountMS=200
 intruder.delayMaxJitterMS=2000
 ldap.resolveCanonicalDN=true
 ldap.cache.canonical.enable=true
-ldap.cache.canonical.seconds=60
+ldap.cache.canonical.seconds=600
 ldap.cache.userGuid.enable=true
 ldap.cache.userGuid.seconds=3600
 ldap.chaiSettings=
