--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -25,7 +25,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>0.9.9</version>
+                <version>0.9.10</version>
                 <executions>
                     <execution>
                         <id>make-docker-image</id>
@@ -42,7 +42,7 @@
                                     <jvmFlag>-Xms1g</jvmFlag>
                                     <jvmFlag>-Xmx1g</jvmFlag>
                                 </jvmFlags>
-                                <mainClass>password.pwm.onejar.TomcatOneJarMain</mainClass>
+                                <mainClass>password.pwm.onejar.TomcatOnejarRunner</mainClass>
                                 <args>
                                     <arg>-applicationPath</arg>
                                     <arg>/config</arg>
@@ -50,7 +50,7 @@
                                 <format>docker</format>
                                 <ports>8443</ports>
                             </container>
-                            <useCurrentTimestamp>true</useCurrentTimestamp>
+                            <!--<useCurrentTimestamp>true</useCurrentTimestamp>-->
                             <allowInsecureRegistries>true</allowInsecureRegistries>
                         </configuration>
                     </execution>
