--- a/onejar/pom.xml
+++ b/onejar/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <project.root.basedir>${project.basedir}/..</project.root.basedir>
-        <tomcat.version>9.0.11</tomcat.version>
+        <tomcat.version>9.0.12</tomcat.version>
         <jetty-version>9.4.11.v20180605</jetty-version>
     </properties>
 
@@ -50,7 +50,7 @@
                     </descriptors>
                     <archive>
                         <manifestEntries>
-                            <Main-Class>password.pwm.onejar.TomcatOneJarMain</Main-Class>
+                            <Main-Class>password.pwm.onejar.OnejarMain</Main-Class>
                             <Implementation-Title>${project.name}</Implementation-Title>
                             <Implementation-Version>${project.version}</Implementation-Version>
                             <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
